--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "axios": "^1.5.0",
+    "bootstrap": "^5.1.0",
+    "bulma": "^0.9.4",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.4",
+    "vue-simple-alert": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
